# achievement-tracker

./: .env.example  .gitignore  README.md  SETUP.md  launcher.py  pyproject.toml
src/: app.py  database.py  models.py  notion_sync.py  tag_suggester.py
src/prompts/: rewrite_field.txt  tag_suggestions.txt  title_suggestion.txt
static/: app.js  index.html  style.css
tasks/: todo.md
tests/: test_api.py  test_database.py  test_tag_suggester.py
